<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KidsPangPang_login</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="login2">Log In</string>
    <string name="appname">Kids 팡팡</string>
    <string name="picture">사진 팡팡</string>
    <string name="word">단어 팡팡</string>
</resources>
